src/pages/DetailPage/DetailPage.scss
.detail-page {
  display: flex;
  margin-inline: auto;
  border-radius: 15px;
  overflow: hidden;
  flex-direction: column;
  margin-block: 1rem;
  box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);

  .detail-page__img {
    display: grid;
    width: 50%;

    &:has(img[src*="Planets"]) {
      place-content: center;
    }
  }

  .detail-page__info {
    padding: 1rem;
    background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
    background-size: 8px;
    background-repeat: repeat-x;
    background-color: var(--bg-dark-gray);
    color: var(--primary-white);
    border-left: 3px solid var(--primary-pink);
    width: 50%;
    flex-grow: 1;

    &--row {
      display: flex;
      flex-wrap: wrap;
      margin-block: 0.5rem;
      padding-top: 0.25rem;
        
        h3 {
          margin-block: 0.5rem;
        }
        
        &>* {
          flex: 1 0;
          width: 100%;
          max-width: 100%;
        }
        
        @media (max-width: 575px) {
          & {
            padding: 0;
            margin: 0;
          }
          & > * {
              margin-inline-end: 1rem;
          }
          
      }
    }


    h1 {
      font-size: var(--step-1);
    }

    h3 {
      font-size: var(--step--1);
    }

    span {
      font-size: var(--step--2);
      display: block;
      color: var(--primary-gray);
    }

    .loadingio-spinner-eclipse-3z3n0w49pdf { 
      width: 120px;
      height: 120px;
    }
    @media (max-width: 575px) {
      padding-block: 0.6rem;
    }
  }

  img {
    width: 100%;
    max-height: calc(min(24.5vh, 600px));
    min-height: 100%;
    object-fit: cover;
  }

  img[src*="vignette"] {
    object-position: 50% 30%;
  }

  img[src*="Films"] {
    @media (max-width: 575px) {
      object-position: 50% 30%;
    }
  }

  @media (max-width: 575px) {
    max-width: calc(min(94vw, 540px));
  }

  @media (min-width: 576px) and (max-width: 768px) {
    &:has(img[src*="vignette"], img[src*="Films"]) {
      flex-direction: row;

      .detail-page__info {
        border-left: 3px solid var(--primary-pink);
        border-top: none;
      }
    }
  }

  @media (min-width: 576px) {
    max-width: calc(min(90vw, 758px));
    min-height: calc(min(65vh, 500px));
  }

  @media (max-width: 768px) {
    .detail-page__info {
      border-top: 3px solid var(--primary-pink);
      border-left: none;
      width: 100%;
    }

    .detail-page__img {
      width: 100%;
      &:has(img[src*=Planets]) {
        margin-block: 0.5rem;
      }
    }

    :is(img[src*="Yavin4"], img[src*="Bestine"], img[src*="Dantooine"]){
      clip-path: circle(88px);
    }
    img[src*="Mygeeto"] {
      max-height: 30vh;
      clip-path: circle(90px);
    }
    img[src*="Saleucami"] {
      clip-path: circle(73px);
    }
  }
  @media (min-width: 700px) {
    img[src*="Planets"] {
      max-height: calc(max(25vh, 300px));
    }
  }

  @media (min-width: 768px) {
    flex-direction: row;

    h1 {
      font-size: var(--step-3);
      padding-inline-start: 0;
    }
  }

  @media (min-width: 992px) {
    img[src*="Films"] {
      object-position: top;
    }
  }
}

@media (min-width: 700px) {
  .detail-page {
    flex-direction: row;

    &:has(img[src*="Starships"], img[src*="Planets"]) {
      .detail-page__info {
        border-left: 3px solid var(--primary-pink);
        border-top: none;
      }
    }
  }
}

